# swapper

./: .gitignore  CHANGES  INSTALL  README.md
libstmm-swapper/: CMakeLists.txt  INSTALL  NEWS  README.md  stmm-swapper-defs.cmake  stmm-swapper.pc.in
libstmm-swapper-xml/: CMakeLists.txt  INSTALL  NEWS  README.md  stmm-swapper-xml-defs.cmake  stmm-swapper-xml.pc.in
libstmm-swapper-xml/data/themes/swapper/simple_s.thm/: theme.xml
libstmm-swapper-xml/doc/: CMakeLists.txt
libstmm-swapper-xml/include/stmm-swapper-xml/: stmm-swapper-xml-config.h  xmlcharremoverevent.h  xmlcolorremoverevent.h  xmldestroyerevent.h  xmlgravityevent.h  xmlswapperevent.h  xmltileremoverevent.h  xmltopjunkevent.h
libstmm-swapper-xml/scripts/: install_libstmm-swapper-xml.py  uninstall_libstmm-swapper-xml.py
libstmm-swapper-xml/src/: stmm-swapper-xml-config.cc.in  xmlcharremoverevent.cc  xmlcolorremoverevent.cc  xmldestroyerevent.cc  xmlgravityevent.cc  xmlswapperevent.cc  xmltileremoverevent.cc  xmltopjunkevent.cc
libstmm-swapper-xml/test/: CMakeLists.txt
libstmm-swapper/doc/: CMakeLists.txt
libstmm-swapper/include/stmm-swapper/: charremoverevent.h  colorremoverevent.h  destroyerevent.h  gravityblock.h  gravityevent.h  stmm-swapper-config.h  swapperevent.h  tileremoverevent.h  topjunkevent.h
libstmm-swapper/scripts/: install_libstmm-swapper.py  uninstall_libstmm-swapper.py
libstmm-swapper/src/: adjremover.cc  adjremover.h  charremoverevent.cc  colorremoverevent.cc  destroyerevent.cc  gravityblock.cc  gravityevent.cc  stmm-swapper-config.cc.in  swapperevent.cc  tileremoverevent.cc  topjunkevent.cc
libstmm-swapper/test/: CMakeLists.txt  testAdjRemover.cxx  testGravityEvent.cxx  testTopJunkEvent.cxx
scripts/: arch_create.py  debian_create.py  install_swapper-all.py  sourcepackage.py  testall.py  uninstall_swapper-all.py
scripts/priv/: checktidy.py  dd_install_swapper-all.py  debian_src_versions.cmake  pk_install_swapper-all.py
scripts/priv/arch.orig/: PKGBUILD.in
scripts/priv/debian.orig/: changelog.in  control.in  copyright  libstmm-swapper-dev.install  libstmm-swapper-xml-dev.install  libstmm-swapper-xml@STMM_SWAPPER_XML_MAJOR_VERSION@.install.in  libstmm-swapper-xml@STMM_SWAPPER_XML_MAJOR_VERSION@.shlibs.in  libstmm-swapper@STMM_SWAPPER_MAJOR_VERSION@.install.in  libstmm-swapper@STMM_SWAPPER_MAJOR_VERSION@.shlibs.in  rules  swapper.1  swapper.install  swapper.manpages  watch.in
share/cmake/: CommonDoxy.cmake  CommonTesting.cmake  CommonUtil.cmake
share/doc/: docu-config.doxygen.in
share/python/: checkcode.py  frag_arch_create.py  frag_checktidy.py  frag_debian_create.py  frag_sourcepackage.py
swapper/: .gitignore  AUTHORS  CMakeLists.txt  INSTALL  README.md  swapper-defs.cmake
swapper/data/applications/: com.efanomars.swapper.desktop
swapper/data/games/swapper/: blob.xml  classic.xml  classic2H.xml  classicVs.xml  half.xml  stony.xml  stony2H.xml  stonyVs.xml
swapper/scripts/: install_swapper.py  uninstall_swapper.py
swapper/src/: binconfig.cc.in  binconfig.h  main.cc  setup.cc  setup.h  setupstdconfig.cc  setupstdconfig.h  setupxmlgameloader.cc  setupxmlgameloader.h  setupxmlthemeloader.cc  setupxmlthemeloader.h
swapper/test/: CMakeLists.txt  testLoadGames.cxx  testconfig.cc.in  testconfig.h
